hard code temp fix sponsor overlaping issue... maybe fix later

--- a/css/style.css
+++ b/css/style.css
@@ -865,6 +865,11 @@ header {
     margin-top: auto;
     margin-bottom: auto;
     vertical-align: middle;
+    width: 100%;
+    height: auto;
+    max-width: 250px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /*------------------------------------*\
